--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~leaflet/dist/leaflet.css";
+@import "https://fonts.google.com/specimen/Rubik";
+
+html, body { height: 100%; margin: 0 ;font-family: Rubik, sans-serif;font-size: 18px;}
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
