--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       class="d-flex dialog-container bg-light position-absolute border border-light rounded px-2 py-2"
       style="z-index: 2000; max-width: 800px"
     >
-      <ng-container *ngFor="let info of data | keyvalue: orderOriginal">
+      <ng-container *ngFor="let info of data | keyvalue : orderOriginal">
         <div class="dialog-start">
           <span>
             <div>{{ info.key | uppercase }}</div>
@@ -17,24 +17,34 @@
     <div class="search-container">
       <div class="text-light fw-bold fs-4 pt-3 pb-3">IP Address Tracker</div>
       <form #searchForm="ngForm" (ngSubmit)="searchSubmit(searchForm.value)">
-        <div class="input-group mb-3">
+        <div class="input-group">
           <input
             name="searchValue"
             type="text"
             class="form-control"
             style="height: 50px"
-            placeholder="Search for any IP address or domain"
+            placeholder="Search for any IP address"
             [ngModel]="searchValue"
             required
           />
-          <button type="submit" [disabled]="!searchForm.valid" class="btn btn-dark" style="width: 50px" type="submit">
+          <button
+            type="submit"
+            [disabled]="!searchForm.valid"
+            class="btn btn-dark"
+            style="width: 50px"
+            type="submit"
+          >
             <img src="../assets/icon-arrow.svg" alt="enter" />
           </button>
         </div>
+        <p *ngIf="isError">Please enter a valid IP address</p>
       </form>
     </div>
     <div class="map-container">
-      <app-map [ipaddressvalue]="searchValue" (passIPValue)="getIPDetails($event)"></app-map>
+      <app-map
+        [ipaddressvalue]="searchValue"
+        (passIPValue)="getIPDetails($event)"
+      ></app-map>
     </div>
   </div>
 </div>
