--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 @import "~leaflet/dist/leaflet.css";
 @import "https://fonts.google.com/specimen/Rubik";
 
-html, body { height: 100%; margin: 0 ;font-family: Rubik, sans-serif;font-size: 18px;}
-// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-family: Rubik, sans-serif;
+    font-size: 18px;
+}
